//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  password String [not null]
  dob DateTime
  gender String
  profilePicture String
  coverPicture String
  bio String
  location String
  sports SportUsers [not null]
  posts Post [not null]
  conversations Conversation [not null]
  messages Message [not null]
  friendsOf UsersFriends [not null]
  friends UsersFriends [not null]
  friendRequestsSent FriendRequests [not null]
  friendRequestsReceived FriendRequests [not null]
  communitiesOwned Community [not null]
  communities CommunityMembers [not null]
  comments Comment [not null]
  likes PostLikes [not null]
  dislikes PostDislike [not null]
}

Table FriendRequests {
  id Int [pk, increment]
  sender User [not null]
  senderId Int [not null]
  receiver User [not null]
  receiverId Int [not null]
}

Table UsersFriends {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  friend User [not null]
  friendId Int [not null]
}

Table Conversation {
  id Int [pk, increment]
  users User [not null]
  messages Message [not null]
}

Table Message {
  id Int [pk, increment]
  content String [not null]
  conversation Conversation [not null]
  conversationId Int [not null]
  sender User [not null]
  senderId Int [not null]
}

Table Sport {
  id Int [pk, increment]
  name String [not null]
  description String
  images String[] [not null]
  users SportUsers [not null]
  communities Community [not null]
}

Table SportUsers {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  sport Sport [not null]
  sportId Int [not null]
}

Table Community {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  image String[] [not null]
  sport Sport
  sportId Int
  posts Post [not null]
  owner User [not null]
  ownerId Int [not null]
  members CommunityMembers [not null]
}

Table CommunityMembers {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  community Community [not null]
  communityId Int [not null]
}

Table Post {
  id Int [pk, increment]
  title String
  content String
  published Boolean [not null, default: false]
  author User [not null]
  authorId Int [not null]
  community Community [not null]
  communityId Int [not null]
  comments Comment [not null]
  images String[] [not null]
  likes PostLikes [not null]
  dislikes PostDislike [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table PostLikes {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  post Post [not null]
  postId Int [not null]
}

Table PostDislike {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  post Post [not null]
  postId Int [not null]
}

Table Comment {
  id Int [pk, increment]
  content String [not null]
  author User [not null]
  authorId Int [not null]
  post Post [not null]
  postId Int [not null]
  replies Comment [not null]
  parent Comment
  parentId Int
}

Table ConversationToUser {
  conversationsId Int [ref: > Conversation.id]
  usersId Int [ref: > User.id]
}

Ref: FriendRequests.senderId > User.id

Ref: FriendRequests.receiverId > User.id

Ref: UsersFriends.userId > User.id

Ref: UsersFriends.friendId > User.id

Ref: Message.conversationId > Conversation.id

Ref: Message.senderId > User.id

Ref: SportUsers.userId > User.id

Ref: SportUsers.sportId > Sport.id

Ref: Community.sportId > Sport.id

Ref: Community.ownerId > User.id

Ref: CommunityMembers.userId > User.id [delete: Cascade]

Ref: CommunityMembers.communityId > Community.id [delete: Cascade]

Ref: Post.authorId > User.id

Ref: Post.communityId > Community.id [delete: Cascade]

Ref: PostLikes.userId > User.id [delete: Cascade]

Ref: PostLikes.postId > Post.id [delete: Cascade]

Ref: PostDislike.userId > User.id [delete: Cascade]

Ref: PostDislike.postId > Post.id [delete: Cascade]

Ref: Comment.authorId > User.id

Ref: Comment.postId > Post.id [delete: Cascade]

Ref: Comment.parentId > Comment.id